peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: codex-warlab-strict
  namespace: codex-warlab
spec:
  mtls:
    mode: STRICT
