spire-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spire-server
  namespace: codex-warlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spire-server
  template:
    metadata:
      labels:
        app: spire-server
    spec:
      containers:
        - name: spire-server
          image: ghcr.io/spiffe/spire-server:1.9.6
          args: ["-config", "/run/spire/server/server.conf"]
