vault-agent-injector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-agent-injector
  namespace: codex-warlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-agent-injector
  template:
    metadata:
      labels:
        app: vault-agent-injector
    spec:
      serviceAccountName: vault-auth
      containers:
        - name: vault-agent-injector
          image: hashicorp/vault-k8s:1.4.2
          args: ["agent-inject", "2>&1"]
